task-12/cloudformation/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create two EC2 instances with security groups

Resources:
  MyInstance1:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: eu-central-1a
      ImageId: ami-0550f71ebd55e2944
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref WebServerSG
      KeyName: ahmed-srebrenica-web-server-key
      Tags:
        - Key: Name
          Value: task-12-web-server-cf
        - Key: CreatedBy
          Value: ahmed.srebrenica
        - Key: Project 
          Value: task-12
        - Key: IaC
          Value: CloudFormation

  MyInstance2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: eu-central-1a
      ImageId: ami-0550f71ebd55e2944
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref MySQLSG
      KeyName: ahmed-srebrenica-web-server-key
      Tags:
        - Key: Name
          Value: task-12-db-server-cf
        - Key: CreatedBy
          Value: ahmed.srebrenica
        - Key: Project 
          Value: task-12
        - Key: IaC
          Value: CloudFormation



  MySQLSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22 
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable accessing server via port 80
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
